cabal-version: 1.12

name:           milp
version:        0.1.0.1
description:    Please see the README on GitHub at <https://github.com/foshardware/milp#readme>
homepage:       https://github.com/foshardware/milp#readme
bug-reports:    https://github.com/foshardware/milp/issues
author:         Andreas Westerwick
maintainer:     westerwick@pconas.de
copyright:      2019 Andreas Westerwick
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/foshardware/milp

library
  exposed-modules:
      Control.MILP
      Control.MILP.Builder
      Control.MILP.Result
      Control.MILP.Types
      Language.LP.Lexer
      Language.LP.Parser
      Language.LP.Tokens
  other-modules:
      Paths_milp
  hs-source-dirs:
      src
  build-tools:
      alex
    , happy
  build-depends:
      base >=4.7 && <5
    , array
    , containers
    , hashable
    , mmorph
    , mtl
    , parsec
    , parsec-numbers
    , process
    , temporary
    , text
    , unordered-containers
  default-language: Haskell2010

test-suite milp-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_milp
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , file-embed
    , milp
    , text
  default-language: Haskell2010

executable runlp
  main-is: RunLP.hs
  other-modules:
      Paths_milp
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , milp
    , mtl
    , text
